refactor(ticket-registry): use mapMulti in TicketRegistry#addTicket
Replace map(Unchecked.function(...)).filter(Objects::nonNull) with
mapMulti to avoid the intermediate null-filtering stream stage.
No behavioral change.